# everything-class

./: .gitignore  CLAUDE.md  Cargo.toml  build.rs
.claude/: settings.local.json
.superpowers/brainstorm/241-1778332862/: .server-info  design-summary.html  design-v2.html  layout.html
docs/superpowers/plans/: 2026-05-09-window-class-finder.md  2026-05-09-window-handle-finder.md  2026-05-19-hotkey-locate.md  2026-05-19-right-click-locate.md
docs/superpowers/specs/: 2026-05-09-window-class-finder-design.md  2026-05-09-window-handle-finder-design.md  2026-05-19-hotkey-locate-design.md  2026-05-19-right-click-locate-design.md  2026-05-20-cli-query-design.md
src/: clipboard.rs  main.rs  window_info.rs  windows_api.rs
src/ui/: app_state.rs  locate_mode.rs  mod.rs  tree_helper.rs
