[package]
name = "window-handle-finder"
version = "0.1.0"
edition = "2021"

[dependencies]
native-windows-gui = "1.0"
native-windows-derive = "1.0"
clipboard-win = "5.0"
widestring = "1.0"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true